@@ -986,12 +986,6 @@ public class FairScheduler extends
     SchedulerUtils.normalizeRequests(ask, RESOURCE_CALCULATOR, clusterResource,
             minimumAllocation, getMaximumResourceCapability(), incrAllocation);
 
-    // Set amResource for this app
-    if (!application.getUnmanagedAM() && ask.size() == 1
-        && application.getLiveContainers().isEmpty()) {
-      application.setAMResource(ask.get(0).getCapability());
-    }
-
     // Release containers
     releaseContainers(release, application);
 
